swim_client/src/configuration/tests/resources/valid/client-config-retry-exponential.recon
@config {
    @downlink_connections {
        dl_req_buffer_size: 8,
        buffer_size: 100,
        yield_after: 256,
        retry_strategy: @exponential {
            max_interval: @duration {
                secs: 30,
                nanos: 0
            },
            max_backoff: "infinite"
        }
    }
}